// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty square 1`] = `
<div
  className="square filledSquare nullBackground"
/>
`;

exports[`filled square 1`] = `
<div
  className="square filledSquare tBackground"
/>
`;

exports[`tetriminos square 1`] = `
<div
  className="square filledSquare oBackground"
/>
`;
